--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>Gobika U Portfolio</title>
     <link href="styles.css" rel="stylesheet" />
-    <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
   </head>
   <body>
     <header>
@@ -38,28 +36,32 @@
         </h3>
         <br />
         <p>
-          I am currently a second-year student actively looking for an
-          internship opportunity. Please explore my portfolio to see my work and
-          learn more about my skills.
+        To obtain a Full Stack Developer position where I can utilize my frontend and backend development skills to build robust and responsive web applications.
         </p>
         <br /><br /><br />
         <br />
         <div class="social">
           <a
-            href="https://www.instagram.com/gobika_ulaganathan?igsh=MTJudXl6MWRsM2Nndw=="
+            href="https://instagram.com/gobika_ulaganathan"
+            target="_blank"
+            rel="noopener noreferrer"
             ><i class="bx bxl-instagram"></i
           ></a>
           <a href="https://www.linkedin.com/in/gobika-ulaganathan-28748625a"
+            target="_blank"
+            rel="noopener noreferrer"
             ><i class="bx bxl-linkedin-square"></i
           ></a>
-          <a href="http://Wa.me/+919361766931"
+          <a href="https://wa.me/919361766931"
+            target="_blank"
+            rel="noopener noreferrer"
             ><i class="bx bxl-whatsapp"></i
           ></a>
         </div>
         <br /><br />
         <div class="button-hc">
           <a
-            href="https://drive.google.com/uc?export=download&id=15YB61zr03wO3K453NQNbWNOk6yFJ0cv9"
+            href="https://drive.google.com/file/d/17lLfVesQyDqjucIMinkzVoyVFIDnhzcN/view?usp=drivesdk "
             target="_blank"
             >Resume</a
           >
@@ -176,15 +178,32 @@
           </div>
         </div>
         <div class="project-card">
-          <h3>Responsive Starbucks Website</h3>
+          <h3>Cardiac Health Assessment Using CNN and MFCC-Based Sound Processing
+</h3>
           <p>
-            This project demonstrates my ability to create a visually appealing,
-            user-friendly, and responsive web application from scratch.
+            A system to predict heart disease by analyzing heart sound recordings using CNN and MFCC, enabling early, non-invasive diagnosis and improving patient outcomes.
           </p>
           <div class="technologies">
-            <span>HTML</span>
-            <span>CSS </span>
-            <span>JavaScript </span>
+            <span>Deep learning</span>
+            <span>CNN </span>
+            <span>MFCC </span>
+          </div>
+          <br /><br />
+          <div class="but">
+            <a href="http://127.0.0.1:5502/index.html">View</a>
+          </div>
+        </div>
+      <div class="project-card">
+          <h3>Enhancing Patient Safety with Machine Learning: Automating the Interpretation of Handwritten Medical Prescriptions
+
+</h3>
+          <p>
+            A system to convert handwritten doctor prescriptions into readable digital text, reducing errors and improving patient safety.
+  </p>
+          <div class="technologies">
+            <span>Deep learning</span>
+            <span>CNN </span>
+            <span>OCR </span>
           </div>
           <br /><br />
           <div class="but">
@@ -196,58 +215,69 @@
     <br /><br />
 
     <!-- contact -->
-    <header>
-      <h1>Contact Me</h1>
-    </header>
-    <main>
-      <section class="contact-info">
-        <form action="contact.php" method="post">
-        <h2>Contact Information</h2>
-        <ul>
-          <li>
-            Email:
-            <a href="mailto:gobika.ulaganathan@gmail.com"
-              >gobika.ulaganathan@gmail.com</a
-            >
-          </li>
-          <li>Phone: +91 93617 66931</li>
-          <li>
-            LinkedIn:
-            <a
-              href="https://www.linkedin.com/in/gobika-ulaganathan-28748625a"
-              target="_blank"
-              >https://www.linkedin.com/in/gobika-ulaganathan-28748625a</a
-            >
-          </li>
-          <li>
-            GitHub:
-            <a href="https://github.com/yourusername" target="_blank"
-              >https://github.com/Gobikaulagu</a
-            >
-          </li>
-        </ul>
-      </section>
-      <section class="contact-form" id="contact">
-        <h2>Contact Form</h2>
-        <form action="#" method="post">
-          <div class="input-group">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required />
+    <section class="contact" id="contact">
+      <div class="contact-container">
+        <h2>Get In Touch</h2>
+        <div class="contact-content">
+          <div class="contact-info">
+            <h3>Contact Information</h3>
+            <div class="info-item">
+              <i class='bx bxs-envelope'></i>
+              <div>
+                <h4>Email</h4>
+                <a href="mailto:gobika.ulaganathan@gmail.com">gobika.ulaganathan@gmail.com</a>
+              </div>
+            </div>
+            <div class="info-item">
+              <i class='bx bxs-phone'></i>
+              <div>
+                <h4>Phone</h4>
+                <p>+91 93617 66931</p>
+              </div>
+            </div>
+            <div class="info-item">
+              <i class='bx bxl-linkedin'></i>
+              <div>
+                <h4>LinkedIn</h4>
+                <a href="https://www.linkedin.com/in/gobika-ulaganathan-28748625a" target="_blank">Connect with me</a>
+              </div>
+            </div>
+            <div class="info-item">
+              <i class='bx bxl-github'></i>
+              <div>
+                <h4>GitHub</h4>
+                <a href="https://github.com/Gobikaulagu" target="_blank">View my work</a>
+              </div>
+            </div>
           </div>
-          <div class="input-group">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required />
+
+          <div class="contact-form">
+            <h3>Send Me a Message</h3>
+            <form action="#" method="post">
+              <div class="input-group">
+                <input type="text" id="name" name="name" required />
+                <label for="name">Your Name</label>
+              </div>
+              <div class="input-group">
+                <input type="email" id="email" name="email" required />
+                <label for="email">Your Email</label>
+              </div>
+              <div class="input-group">
+                <textarea id="message" name="message" required></textarea>
+                <label for="message">Your Message</label>
+              </div>
+              <button type="submit" class="submit-btn">
+                <i class='bx bxs-send'></i>
+                Send Message
+              </button>
+            </form>
           </div>
-          <div class="input-group">
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" required></textarea>
-          </div>
-          <button type="submit">Send Message</button>
-        </form>
-      </section>
-    </main>
+        </div>
+      </div>
+    </section>
+
     <footer>
-      <p>&copy; 2024 Gobika ulaganathan</p>
+      <p>&copy; 2024 Gobika Ulaganathan. All rights reserved.</p>
     </footer>
   </body>
 </html>
